--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-title" content="Tasker" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     
-    <link rel="icon" type="image/jpeg" href="/tasker-app/assets/applogo-BUt7ItUb.jpeg" />
+    <link rel="icon" type="image/jpeg" href="applogo.jpeg" />
     <link rel="apple-touch-icon" href="logo-512.jpeg" />
     <link rel="manifest" href="manifest.json" />
     
